tambah Isi Notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -13034,6 +13034,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Insight**\n",
+        "- Bining tersebut bertujuan untuk mengelompokkan data suhu menjadi beberapa kategori yang lebih mudah dipahami\n",
+        "- Dapat disimpulkan bahwa penyewa cenderung menyewa sepeda saat suhu sedang"
+      ],
+      "metadata": {
+        "id": "9Zs3lcgeLmR9"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "_WeHlCeX8DC2"
       },
